# readlvm

./: README.md  pyproject.toml
readlvm/: __init__.py  __main__.py  commands.py  lvm_data.py
tests/: test_comment.lvm  test_empty_line.lvm  test_lvm_data.py  test_normal.lvm  test_with_lack.lvm
