[tool.poetry]
name = "readlvm"
version = "0.1.0"
description = ""
authors = ["Tetraliane <57061591+tetraliane@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
